Fixed operationIds, server functional
