# controllers/Subreddit.js
@@ -23,8 +23,8 @@ module.exports.editSubredditSettings = function editSubredditSettings (req, res,
     });
 };
 
-module.exports.getBanned(subreddit) = function getBanned(subreddit) (req, res, next, subreddit) {
-  Subreddit.getBanned(subreddit)(subreddit)
+module.exports.getBanned = function getBanned (req, res, next, subreddit) {
+  Subreddit.getBanned(subreddit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -33,8 +33,8 @@ module.exports.getBanned(subreddit) = function getBanned(subreddit) (req, res, n
     });
 };
 
-module.exports.getEditedPosts(subreddit) = function getEditedPosts(subreddit) (req, res, next, subreddit) {
-  Subreddit.getEditedPosts(subreddit)(subreddit)
+module.exports.getEditedPosts = function getEditedPosts (req, res, next, subreddit) {
+  Subreddit.getEditedPosts(subreddit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -43,8 +43,8 @@ module.exports.getEditedPosts(subreddit) = function getEditedPosts(subreddit) (r
     });
 };
 
-module.exports.getModQueuePosts(subreddit) = function getModQueuePosts(subreddit) (req, res, next, subreddit) {
-  Subreddit.getModQueuePosts(subreddit)(subreddit)
+module.exports.getModQueuePosts = function getModQueuePosts (req, res, next, subreddit) {
+  Subreddit.getModQueuePosts(subreddit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -53,8 +53,8 @@ module.exports.getModQueuePosts(subreddit) = function getModQueuePosts(subreddit
     });
 };
 
-module.exports.getModerators(subreddit) = function getModerators(subreddit) (req, res, next, subreddit) {
-  Subreddit.getModerators(subreddit)(subreddit)
+module.exports.getModerators = function getModerators (req, res, next, subreddit) {
+  Subreddit.getModerators(subreddit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -63,8 +63,8 @@ module.exports.getModerators(subreddit) = function getModerators(subreddit) (req
     });
 };
 
-module.exports.getMuted(subreddit) = function getMuted(subreddit) (req, res, next, subreddit) {
-  Subreddit.getMuted(subreddit)(subreddit)
+module.exports.getMuted = function getMuted (req, res, next, subreddit) {
+  Subreddit.getMuted(subreddit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -73,8 +73,8 @@ module.exports.getMuted(subreddit) = function getMuted(subreddit) (req, res, nex
     });
 };
 
-module.exports.getReportedPosts(subreddit) = function getReportedPosts(subreddit) (req, res, next, subreddit) {
-  Subreddit.getReportedPosts(subreddit)(subreddit)
+module.exports.getReportedPosts = function getReportedPosts (req, res, next, subreddit) {
+  Subreddit.getReportedPosts(subreddit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -83,8 +83,8 @@ module.exports.getReportedPosts(subreddit) = function getReportedPosts(subreddit
     });
 };
 
-module.exports.getSpammedPosts(subreddit) = function getSpammedPosts(subreddit) (req, res, next, subreddit) {
-  Subreddit.getSpammedPosts(subreddit)(subreddit)
+module.exports.getSpammedPosts = function getSpammedPosts (req, res, next, subreddit) {
+  Subreddit.getSpammedPosts(subreddit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -93,8 +93,8 @@ module.exports.getSpammedPosts(subreddit) = function getSpammedPosts(subreddit) 
     });
 };
 
-module.exports.getSubreddit = function getSubreddit (req, res, next, subreddit) {
-  Subreddit.getSubreddit(subreddit)
+module.exports.getSubreddit = function getSubreddit (req, res, next, subreddit, sort) {
+  Subreddit.getSubreddit(subreddit, sort)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -103,48 +103,8 @@ module.exports.getSubreddit = function getSubreddit (req, res, next, subreddit) 
     });
 };
 
-module.exports.getSubredditMod() = function getSubredditMod() (req, res, next) {
-  Subreddit.getSubredditMod()()
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.getSubredditPosts(HOT) = function getSubredditPosts(HOT) (req, res, next, subreddit) {
-  Subreddit.getSubredditPosts(HOT)(subreddit)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.getSubredditPosts(NEW) = function getSubredditPosts(NEW) (req, res, next, subreddit) {
-  Subreddit.getSubredditPosts(NEW)(subreddit)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.getSubredditPosts(RISING) = function getSubredditPosts(RISING) (req, res, next, subreddit) {
-  Subreddit.getSubredditPosts(RISING)(subreddit)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.getSubredditPosts(TOP) = function getSubredditPosts(TOP) (req, res, next, subreddit) {
-  Subreddit.getSubredditPosts(TOP)(subreddit)
+module.exports.getSubredditMod = function getSubredditMod (req, res, next) {
+  Subreddit.getSubredditMod()
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -163,8 +123,8 @@ module.exports.getSubredditSettings = function getSubredditSettings (req, res, n
     });
 };
 
-module.exports.getUnmoderatedPosts(subreddit) = function getUnmoderatedPosts(subreddit) (req, res, next, subreddit) {
-  Subreddit.getUnmoderatedPosts(subreddit)(subreddit)
+module.exports.getUnmoderatedPosts = function getUnmoderatedPosts (req, res, next, subreddit) {
+  Subreddit.getUnmoderatedPosts(subreddit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
